# readmapper

./: CMakeCache.txt  CMakeLists.txt  cmake_uninstall.cmake  cmake_uninstall.cmake.in  install_manifest.txt
src/: CMakeLists.txt  alignment.cpp  alignment.hpp  aligntest.cpp  fastareader.cpp  fastareader.hpp  fastqreader.cpp  fastqreader.hpp  readmapper.cpp  seqalign.cpp  seqreader.cpp  sequence.cpp  sequence.hpp  sequencereader.hpp  sw.cpp  sw.hpp
